# SunToday

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.rst  README.md  docker-compose.yml  production.env  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_full.txt  ruff.toml  test.env  tox.ini
image_gen/: .gitignore
src/suntoday/: __init__.py  config.py  conftest.py  constants.py  db.py  jpegs.py  lightcurve.py  main.py  maps.py  utils.py
src/suntoday/data/: __init__.py
src/suntoday/data/test/: 20250803_235940_1700.fits  20250803_235950_1600.fits  20250803_235954_131.fits  20250803_235957_171.fits  20250803_235957_211.fits  20250803_235959_94.fits  20250804_000000_335.fits  20250804_000000_continuum.fits  20250804_000000_magnetogram.fits  20250804_000004_193.fits  20250804_000005_304.fits  __init__.py  aia_timeseries.csv  goes_primary_timeseries.csv  goes_secondary_timeseries.csv
src/suntoday/downloaders/: downloader.py  goes.py  jsoc.py
src/suntoday/downloaders/tests/: test_goes.py  test_jsoc.py
src/suntoday/logos/: __init__.py
src/suntoday/logos/tests/: test_logos.py
src/suntoday/tests/: test_config.py  test_db.py  test_jpegs.py  test_lightcurve.py  test_main.py  test_maps.py  test_utils.py
tools/: fetch_fits.py  update_timeseries_test_files.py
